kubernetes/dbeaver/dbeaver-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbeaver
  labels:
    app: dbeaver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbeaver
  template:
    metadata:
      labels:
        app: dbeaver
    spec:
      volumes:
        - name: dbeaver-data
          persistentVolumeClaim:
            claimName: dbeaver-data-pvc
      containers:
        - name: dbeaver
          image: dbeaver/cloudbeaver:latest
          ports:
            - containerPort: 8978
              protocol: TCP
          volumeMounts:
            - name: dbeaver-data
              mountPath: /opt/cloudbeaver/workspace
          imagePullPolicy: Always
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 1
