kubernetes/dbeaver/dbeaver-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dbeaver
  labels:
    app: dbeaver
spec:
  selector:
    app: dbeaver
  ports:
    - protocol: TCP
      port: 8978
      targetPort: 8978
