kubernetes/dbeaver/dbeaver-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dbeaver
  labels:
    app: dbeaver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: dbeaver.davidcamelo.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: dbeaver
                port:
                  number: 8978
  tls:
    - hosts:
        - dbeaver.davidcamelo.com
      secretName: dbeaver-ingress
